plugins/kotlin/idea/tests/testData/checker/codeFragments/anonymousObject.kt.fragment.k2
<error descr="[UNRESOLVED_REFERENCE]">anonymousObject</error>.kt.fragment